fix whitespace and improve margins

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {margin:0;padding:0}
-html, body {line-height:1.4em}
+html, body {line-height:1.4em;padding-bottom:4em}
 
 @font-face {
     font-family: "caslon";
@@ -14,7 +14,8 @@ html,body	{font-family: "caslon","Times","serif";}
 /* ---------- INDEX PAGE ---------- */
 
 h1 {font-weight:normal;text-align:center;margin-top:1em;margin-bottom:1.5em}
-
+h2 {font-weight:normal;font-size:1.2em;text-align:center;margin-top:2em;margin-bottom:1em}
+.index {padding-top:2em;padding-bottom:0em}
 
 /* index uses li for the list of books */
 li {list-style:disc inside}
@@ -48,7 +49,7 @@ div.bookList {display:block;margin-left:auto;margin-right:auto;margin-bottom:3em
 /* TITLES */
 
 /* major title, and extra words like "the first book, commonly called" */
-h2,.mt,.mt2,.mt3 {font-weight:normal;font-size:1.2em;text-align:center;margin-top:2em;margin-bottom:1em}
+.mt,.mt2,.mt3 {font-weight:normal;font-size:1.2em;text-align:center;margin-top:1.5em;margin-bottom:1em}
 .mt {font-size:1.4em}
 .mt2 {font-size:1.2em}
 
@@ -57,7 +58,7 @@ h2,.mt,.mt2,.mt3 {font-weight:normal;font-size:1.2em;text-align:center;margin-to
 /* TEXT FORMATTING */
 
 /* paragraph. most specific div for much of text */
-.p {text-indent:2em;margin-top:0.5em}
+.p {line-height:1.4em;text-indent:2em;margin-top:0.5em}
 .p,.nb {display:block;font-size:1em}
 
 /* non breaking. only 1sa 4, gen 50, jer 33, john 8 */
@@ -75,7 +76,7 @@ h2,.mt,.mt2,.mt3 {font-weight:normal;font-size:1.2em;text-align:center;margin-to
 */
 
 /* psalms heading */
-.d {font-weight:bold;display:block;margin-top:0pt}
+.d {font-style:italic;display:block;margin-bottom:1em}
 
 /* li: ezra 8, 10, neh7. an indented list */
 .li {display:list-item;list-style-type:none;text-indent:2em}
@@ -110,7 +111,7 @@ html[dir=ltr] .q2 {text-indent:-1em; margin-left:2em}
 
 /* chapter numbers */
 .chapterlabel {text-align:center;margin-top:1em;font-size:1.1em}
-.psalmlabel {text-align:center;margin-top:1em;font-size:1.1em}
+.psalmlabel {text-align:center;margin-top:2.5em;margin-bottom:0.5em;font-size:1.1em}
 
 /* verse numbers */
 .verse {white-space:nowrap;vertical-align:super;font-size:.6em;line-height:0}
@@ -147,7 +148,7 @@ html[dir=ltr] .q2 {text-indent:-1em; margin-left:2em}
 .verse,
 
 /* DO NOT ADD INDEX PAGE TITLE */
-/* it exists solely for best practices and search engine purposes */
+/* it exists for best practices and search engine purposes */
 h1,
 
 /* DO NOT ADD NOTES */
